--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
         <label>
 
             Converter <b>de:</b>
-            <select>
-                <option>R$ Real brasileiro</option>
+            <select class="currency-select-in">
+                <option value="dolarin">US$ Dolar Americano</option>
+                <option value="euroin">€ Euro</option>
+                <option value="librain">£ Libra</option>
+                <option value="bitcoinin">₿ Bitcoin</option>
+                <option value="realin">R$ Real brasileiro</option>
             </select>
         </label>
 
@@ -34,6 +38,10 @@
             <select class="currency-select">
                 <option value="dolar">US$ Dolar Americano</option>
                 <option value="euro">€ Euro</option>
+                <option value="libra">£ Libra</option>
+                <option value="bitcoin">₿ Bitcoin</option>
+                <option value="real">R$ Real brasileiro</option>
+
             </select>
         </label>
 
@@ -41,7 +49,7 @@
 
             Valor:
 
-            <input class="input-currency"placeholder="R$ 10.000.00">
+            <input class="input-currency"placeholder="R$ 10.000,00">
 
         </label>
 
@@ -49,8 +57,8 @@
 
         <section>
             <div class="currency-box">
-                <img src="./assets/real.png" alt="logo-moeda-a-converter">
-                <p class="currency">Real</p>
+                <img class="currency-img-in" src="./assets/real.png" alt="logo-moeda-a-converter">
+                <p class="currency" id="currency-name-in">Real</p>
                 <p class="currency-value-to-convert">R$ 0.00</p>
             </div>
 
