--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     
-    <title>Devclub - Convert Money</title>
+    <title>Devclub - Currency Converter</title>
 </head>
 
 <body>
+
+    <h1>Conversor de Moedas</h1>
     
     <div class="video-mercado">
         <video src="./assets/video-mercado-de-acoes.mov" autoplay muted loop></video>
